--- a/Main/SEToolbox/SEToolbox/Properties/Resources.resx
+++ b/Main/SEToolbox/SEToolbox/Properties/Resources.resx
@@ -443,4 +443,7 @@ Would you like to download it now?</value>
   <data name="book_open2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\book_open2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="elements2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\elements2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
