Add Resource Report export to Xml file. Switched application to new binary loading method as normal, and added /OLDDLL switch for old method. Added in temp directory cleaner. WIP on new voxel conversion for asteroids.

--- a/Main/SEToolbox/SEToolbox/Properties/Resources.resx
+++ b/Main/SEToolbox/SEToolbox/Properties/Resources.resx
@@ -488,4 +488,10 @@ Would you like to download it now?</value>
   <data name="DialogExportTextFileTitle" xml:space="preserve">
     <value>Specify filename to export '{0}' to</value>
   </data>
+  <data name="DialogExportXmlFileFilter" xml:space="preserve">
+    <value>XML files (*.xml)|*.xml</value>
+  </data>
+  <data name="DialogExportXmlFileTitle" xml:space="preserve">
+    <value>Specify filename to export '{0}' to</value>
+  </data>
 </root>
