--- a/Main/SEToolbox/SEToolbox/Properties/Resources.resx
+++ b/Main/SEToolbox/SEToolbox/Properties/Resources.resx
@@ -224,16 +224,16 @@
     <value>..\Resources\transform.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="ExceptionState_NoApplication" xml:space="preserve">
-    <value>The Space Engineers Application could not be found.
-To use the SEToolbox, you must have SpaceEngineers installed on your computer.</value>
+    <value>The Space Engineers application could not be found.
+To use the SEToolbox, you must have the Space Engineers game installed on your computer.</value>
   </data>
   <data name="ExceptionState_NoDirectory" xml:space="preserve">
-    <value>The Space Engineers Directory '{0}' could not be found.
-To use the SEToolbox, you must have SpaceEngineers installed on your computer.</value>
+    <value>The Space Engineers directory '{0}' could not be found.
+To use the SEToolbox, you must have the Space Engineers game installed on your computer.</value>
   </data>
   <data name="ExceptionState_NoRegistry" xml:space="preserve">
-    <value>The Space Engineers Game was not detected in Registry.
-To use the SEToolbox, you must have SpaceEngineers installed on your computer.</value>
+    <value>The Space Engineers game was not detected in Registry.
+To use the SEToolbox, you must have the Space Engineers game installed on your computer.</value>
   </data>
   <data name="ExceptionState_CorruptContentFile" xml:space="preserve">
     <value>The Space Engineers content file '{0}' could not be loaded, either because it is corrupt, or it is newer than expected.</value>
@@ -398,7 +398,7 @@ Units:		{4:#,##0}</value>
     <value>..\Resources\error24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="DialogUnhandledExceptionEventMessage" xml:space="preserve">
-    <value>An error has been detected in the application that has caused the application to shutdown:
+    <value>An error has been detected in the application that has caused the application to shut down:
 
 {0}
 
@@ -406,7 +406,7 @@ Please see the Application Event Log for more details.
 Apologies for any inconvenience.</value>
   </data>
   <data name="DialogUnhandledExceptionMessage" xml:space="preserve">
-    <value>An error has been detected in the application that has caused the application to shutdown:
+    <value>An error has been detected in the application that has caused the application to shut down:
 
 {0}
 
@@ -493,5 +493,30 @@ Would you like to download it now?</value>
   </data>
   <data name="DialogExportXmlFileTitle" xml:space="preserve">
     <value>Specify filename to export '{0}' to</value>
+  </data>
+  <data name="WindowMainTitle" xml:space="preserve">
+    <value>SE Toolbox - {0}</value>
+  </data>
+  <data name="BtBrowseAppTip" xml:space="preserve">
+    <value>Browse for Application</value>
+  </data>
+  <data name="BtCancel" xml:space="preserve">
+    <value>Cancel</value>
+  </data>
+  <data name="BtContinue" xml:space="preserve">
+    <value>Continue</value>
+  </data>
+  <data name="WnLocateAppInvalidText" xml:space="preserve">
+    <value>Invalid location specified.</value>
+  </data>
+  <data name="WnLocateAppPromptUser" xml:space="preserve">
+    <value>The Space Engineers application could not be located.
+Please specify the location of the Space Engineers Application file.</value>
+  </data>
+  <data name="WnLocateAppTitle" xml:space="preserve">
+    <value>Locate Application</value>
+  </data>
+  <data name="WnLocateAppValidText" xml:space="preserve">
+    <value>Valid location detected.</value>
   </data>
 </root>
