--- a/Main/SEToolbox/SEToolbox/Properties/Resources.resx
+++ b/Main/SEToolbox/SEToolbox/Properties/Resources.resx
@@ -413,7 +413,7 @@ Apologies for any inconvenience.</value>
 Apologies for any inconvenience.</value>
   </data>
   <data name="DialogUnhandledExceptionTitle" xml:space="preserve">
-    <value>"Space Engineers Toolbox Error</value>
+    <value>Space Engineers Toolbox Error</value>
   </data>
   <data name="replace2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\replace2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
