Minor updates on pathing. Corrected for changes in SE classes and serializer in latested update. Updated to latest SE bianries. Updated version prior to release.

--- a/Main/SEToolbox/SEToolbox/Properties/Resources.resx
+++ b/Main/SEToolbox/SEToolbox/Properties/Resources.resx
@@ -609,4 +609,10 @@ Please specify the location of the Space Engineers Application file.</value>
   <data name="DialogLocateSandboxTitle" xml:space="preserve">
     <value>Specify location of Space Engineers save game</value>
   </data>
+  <data name="SaveWorldType_Custom" xml:space="preserve">
+    <value>Custom</value>
+  </data>
+  <data name="SaveWorldType_CustomAdminRequired" xml:space="preserve">
+    <value>Custom</value>
+  </data>
 </root>
