--- a/Main/SEToolbox/SEToolbox/Properties/Resources.resx
+++ b/Main/SEToolbox/SEToolbox/Properties/Resources.resx
@@ -279,30 +279,31 @@ Material	Mass	Percent
 {16}</value>
   </data>
   <data name="CubeDetail" xml:space="preserve">
-    <value>Type:	{0}
-Piloted:	{1}
-Damage:	{2}
-Speed:	{3:#,##0.000} m/s
-Distance:	{4:#,##0.0} m
-Scale:	{5} × {6} × {7} blocks
-Size:	{8} m × {9} m × {10} m
-Mass:	{11:#,##0.00} Kg
-Blocks:	{12:#,##0}
-Position:	{13}, {14}, {15}
-Total time to produce:	{16:dd} days, {16:hh} hours, {16:mm\:ss\.ff}
+    <value>Name:	{0}
+Type:	{1}
+Piloted:	{2}
+Damage:	{3}
+Speed:	{4:#,##0.000} m/s
+Distance:	{5:#,##0.0} m
+Scale:	{6} × {7} × {8} blocks
+Size:	{9} m × {10} m × {11} m
+Mass:	{12:#,##0.00} Kg
+Blocks:	{13:#,##0}
+Position:	{14}, {15}, {16}
+Total time to produce:	{17:dd} days, {17:hh} hours, {17:mm\:ss\.ff}
 
 Construction Requirements:
 Cubes	Count	Mass	Time to Produce
-{17}
-
-Components	Count	Mass	Volume	Time to Produce
 {18}
 
-Ingots	Amount	Mass	Volume	Time to Produce
+Components	Count	Mass	Volume	Time to Produce
 {19}
 
+Ingots	Amount	Mass	Volume	Time to Produce
+{20}
+
 Ore	Amount	Mass	Volume
-{20}</value>
+{21}</value>
   </data>
   <data name="document_view" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\document_view.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
