Updated latest SE binaries 01.046.014. Temporary fix to Datagrid not allowing editing of items in Asteroid Field Generator. Fix to Repair not loading required mods. Change to Zip reader to throw more detailed exception for corrupt files. WIP on new voxel tracer. WIP on changing ore generation. Cockpit.Pilot issue resolved by recompile. Updated version number prior to release.

--- a/Main/SEToolbox/SEToolbox/Properties/Resources.resx
+++ b/Main/SEToolbox/SEToolbox/Properties/Resources.resx
@@ -618,4 +618,7 @@ Please update it before running SEToolbox {2} again.</value>
   <data name="DialogOldSEVersionTitle" xml:space="preserve">
     <value>Cannot run with old version of Space Engineers</value>
   </data>
+  <data name="Exception_CorruptZipFile" xml:space="preserve">
+    <value>The specified file '{0}' is corrupt and does not apper to be a valid compressed archive file.</value>
+  </data>
 </root>
