--- a/Main/SEToolbox/SEToolbox/Properties/Resources.resx
+++ b/Main/SEToolbox/SEToolbox/Properties/Resources.resx
@@ -391,7 +391,7 @@ Apologies for any inconvenience.</value>
 Apologies for any inconvenience.</value>
   </data>
   <data name="DialogUnhandledExceptionTitle" xml:space="preserve">
-    <value>Space Engineers Toolbox Error</value>
+    <value>Space Engineers Toolbox '{0}' Error</value>
   </data>
   <data name="replace2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\replace2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -420,9 +420,6 @@ Would you like to download it now?</value>
   </data>
   <data name="book_open2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\book_open2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="elements2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\elements2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="ImportImageClassType_LargeShip" xml:space="preserve">
     <value>Large Ship</value>
@@ -656,5 +653,11 @@ Please update it before running SEToolbox {2} again.</value>
   </data>
   <data name="TraceId_Id5" xml:space="preserve">
     <value>5</value>
+  </data>
+  <data name="selection" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\selection.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Asteroid_model" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Asteroid_model.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
