--- a/Main/SEToolbox/SEToolbox/Properties/Resources.resx
+++ b/Main/SEToolbox/SEToolbox/Properties/Resources.resx
@@ -446,7 +446,7 @@ Would you like to download it now?</value>
     <value>..\Resources\flag_great_britain.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="DialogExportVoxelFilter" xml:space="preserve">
-    <value>Asteroid version 2 files (*.vx2)|*.vx2|Asteroid version 1 files (*.vox)|*.vx2|All files (*.*)|*.*</value>
+    <value>Asteroid version 2 files (*.vx2)|*.vx2|Asteroid version 1 files (*.vox)|*.vox</value>
   </data>
   <data name="DialogExportVoxelTitle" xml:space="preserve">
     <value>Specify file to Export Asteroid to</value>
