--- a/Main/SEToolbox/SEToolbox/Properties/Resources.resx
+++ b/Main/SEToolbox/SEToolbox/Properties/Resources.resx
@@ -660,4 +660,7 @@ Please update it before running SEToolbox {2} again.</value>
   <data name="Asteroid_model" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Asteroid_model.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="users_back" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\users_back.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
