--- a/Main/SEToolbox/SEToolbox/Properties/Resources.resx
+++ b/Main/SEToolbox/SEToolbox/Properties/Resources.resx
@@ -663,4 +663,16 @@ Please update it before running SEToolbox {2} again.</value>
   <data name="users_back" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\users_back.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="VoxelMergeType_SubtractLeftFromRight" xml:space="preserve">
+    <value>Subtract Left from Right</value>
+  </data>
+  <data name="VoxelMergeType_SubtractRightFromLeft" xml:space="preserve">
+    <value>Subtract Right from Left</value>
+  </data>
+  <data name="VoxelMergeType_UnionLeftToRight" xml:space="preserve">
+    <value>Union Left to Right</value>
+  </data>
+  <data name="VoxelMergeType_UnionRightToLeft" xml:space="preserve">
+    <value>Union Right to Left</value>
+  </data>
 </root>
