--- a/Main/SEToolbox/SEToolbox/Properties/Resources.resx
+++ b/Main/SEToolbox/SEToolbox/Properties/Resources.resx
@@ -322,7 +322,7 @@ Ore	Amount	Mass	Volume
 Distance:		{1:#,##0.0} m
 Volume:		{2:#,##0.000} L
 Mass:		{3:#,##0.00} Kg
-Units:		{4:#,##0}</value>
+Units:		{4:#,##0.####}</value>
   </data>
   <data name="copy" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\copy.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
