--- a/Main/SEToolbox/SEToolboxUpdate/Properties/Resources.resx
+++ b/Main/SEToolbox/SEToolboxUpdate/Properties/Resources.resx
@@ -139,7 +139,7 @@ If you accept this risk, then press Yes to continue.</value>
   <data name="UpdateErrorMessage" xml:space="preserve">
     <value>An error occuring whilst attempting to updating the base files.
 You may attempt to run SEToolbox but you risk corrupting any Space Engineers world when you save.
-If is recommended you close the application now, then download and install the latest version of SEToolbox as soon as possible.
+It is recommended you close the application now, then download and install the latest version of SEToolbox as soon as possible.
 
 If with to continue and attempt to run SEToolbox as it is, then press Yes to continue.</value>
   </data>
