Fixed exception due to corrupt asteroid files. Fixed Save was incorrectly allowed on Dedicated Server when not using Elevated privileges. Upped the Asteroid Sphere generation radius from 500 to 3000. I have no idea if 3000 will work. Probably not. Updated to latest SE binaries 01.063.008. Updated version prior to release.

--- a/Main/SEToolbox/SEToolbox/Properties/Resources.resx
+++ b/Main/SEToolbox/SEToolbox/Properties/Resources.resx
@@ -699,4 +699,7 @@ Please update it before running SEToolbox {2} again.</value>
   <data name="ExceptionState_CorruptModFile" xml:space="preserve">
     <value>The Space Engineers mod file '{0}' could not be loaded, because it is corrupt.</value>
   </data>
+  <data name="ExceptionState_CorruptAsteroidFile" xml:space="preserve">
+    <value>The Space Engineers asteroid file '{0}' could not be loaded, either because it is corrupt, or it is newer than expected.</value>
+  </data>
 </root>
