--- a/Main/SEToolbox/SEToolbox/Properties/Resources.resx
+++ b/Main/SEToolbox/SEToolbox/Properties/Resources.resx
@@ -705,4 +705,8 @@ Please update it before running SEToolbox {2} again.</value>
   <data name="target" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\target.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ReplicableDetail" xml:space="preserve">
+    <value>Type:		{0}
+Distance:		{1:#,##0.0} m</value>
+  </data>
 </root>
